--- a/views/transportation.ejs
+++ b/views/transportation.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>UT-NodeJS 중간고사 | Transportation</title>
 
-    <!-- 학생 이름과 학번 -->
+    <!-- 학생 이름과 학번 1826042 장형진 -->
     <meta name="author" content="???" />
     <meta name="description" content="???" />
 
